[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Images/Backgrounds/grassland.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Maps/Beach1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Camera/PlayerCam.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/misc/selection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Resources/Food.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Resources/Wood.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Resources/Stone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Map/UnitSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Units/EnemyUnitTypes/EnemySpearman.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Map/savemapstate.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Structures/EnemyHouse.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Units/EnemyUnitTypes/EnemyArcher.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Structures/EnemyChurch.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Units/EnemyUnitTypes/EnemySwordsman.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Structures/EnemyTower.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Units/NeutralUnitTypes/Monk.tscn" type="PackedScene" id=18]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 346.053, 903.796, 371.55, -16.1392, 438.247, 255.293, 457.093, 1499.48, 303.066, 6614.14, 80.4932, 6969.2, 17.3057, 5588.57, 284.159, 997.697, 10.8391, 1272.06, 30.6083, 89.4992, 276.707, 224.482, 9.42267, 2922.66, 459.741, 3999.59, 445.699, 6540.78, 389.533, 6665.49 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6 ), PoolIntArray( 7, 0, 3 ), PoolIntArray( 8, 9, 10, 7 ), PoolIntArray( 4, 6, 11, 8, 7, 3, 12, 13, 14 ) ]
outlines = [ PoolVector2Array( 10.8391, 1272.06, 30.6083, 89.4992, 276.707, 224.482, 284.159, 997.697, 346.053, 903.796, 371.55, -16.1392, 438.247, 255.293, 457.093, 1499.48, 459.741, 3999.59, 445.699, 6540.78, 389.533, 6665.49, 303.066, 6614.14, 80.4932, 6969.2, 17.3057, 5588.57, 9.42267, 2922.66 ) ]

[node name="engvik" type="Node2D"]
script = ExtResource( 2 )

[node name="Map" type="TextureRect" parent="."]
margin_right = 5000.0
margin_bottom = 3313.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
scale = Vector2( 16.2374, 0.68157 )
navpoly = SubResource( 1 )

[node name="PlayerCam" parent="." instance=ExtResource( 3 )]
position = Vector2( 549, 469 )
current = true

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="Previews" type="Node" parent="."]

[node name="UnitSpawner" parent="." instance=ExtResource( 9 )]
position = Vector2( 427, 475 )

[node name="DeathEffects" type="YSort" parent="."]

[node name="Structures" type="YSort" parent="."]

[node name="Friendly" type="YSort" parent="Structures"]

[node name="Enemy" type="YSort" parent="Structures"]
position = Vector2( -128, -634 )

[node name="EnemyChurch" parent="Structures/Enemy" instance=ExtResource( 14 )]
position = Vector2( 6942, 3605 )

[node name="EnemyHouse" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 5773, 4096 )

[node name="EnemyHouse2" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 6350, 3605 )

[node name="EnemyHouse3" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 6022, 3041 )

[node name="EnemyTower" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 6564, 3105 )

[node name="EnemyTower2" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 6521, 4167 )

[node name="EnemyTower3" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5196, 3568 )

[node name="EnemyTower4" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5579, 2926 )

[node name="EnemyHouse4" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 5744, 3589 )

[node name="EnemyTower5" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5267, 4031 )

[node name="EnemyTower6" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5523, 4559 )

[node name="EnemyTower7" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5994, 2699 )

[node name="EnemyTower8" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 6336, 2606 )

[node name="EnemyTower9" parent="Structures/Enemy" instance=ExtResource( 16 )]
position = Vector2( 5837, 4887 )

[node name="EnemyHouse5" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 6157, 4480 )

[node name="EnemyHouse6" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 6414, 4815 )

[node name="EnemyHouse7" parent="Structures/Enemy" instance=ExtResource( 12 )]
position = Vector2( 6678, 2720 )

[node name="Miners" type="Node" parent="."]

[node name="Resources" type="YSort" parent="."]

[node name="Stone" type="YSort" parent="Resources"]

[node name="StoneArea" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 3128, 2828 )

[node name="StoneArea2" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 2687, 2296 )

[node name="StoneArea3" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 4599, 1131 )

[node name="StoneArea4" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 4537, 2556 )

[node name="StoneArea5" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 4254, 2138 )

[node name="StoneArea6" parent="Resources/Stone" instance=ExtResource( 8 )]
position = Vector2( 5000, 3501 )

[node name="Food" type="YSort" parent="Resources"]

[node name="FoodArea" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 1624, 2393 )

[node name="FoodArea2" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 1030, 3258 )

[node name="FoodArea3" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 1346, 1211 )

[node name="FoodArea4" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 2342, 1505 )

[node name="FoodArea5" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 1804, 606 )

[node name="FoodArea6" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 1069, 2337 )

[node name="FoodArea7" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 2438, 2303 )

[node name="FoodArea8" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 2636, 2914 )

[node name="FoodArea9" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 3037, 1856 )

[node name="FoodArea10" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 3931, 1946 )

[node name="FoodArea11" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 3665, 3174 )

[node name="FoodArea12" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 3750, 911 )

[node name="FoodArea13" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 4406, 3224 )

[node name="FoodArea14" parent="Resources/Food" instance=ExtResource( 6 )]
position = Vector2( 4887, 2659 )

[node name="Wood" type="YSort" parent="Resources"]

[node name="WoodArea14" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 5679, 1205 )

[node name="WoodArea15" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 5742, 3552 )

[node name="WoodArea16" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 5532, 2511 )

[node name="WoodArea" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2432, 916 )

[node name="WoodArea2" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2008, 1227 )

[node name="WoodArea3" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 1861, 1810 )

[node name="WoodArea4" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 1103, 1770 )

[node name="WoodArea5" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 1595, 2930 )

[node name="WoodArea6" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2160, 4248 )

[node name="WoodArea7" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 1086, 3513 )

[node name="WoodArea8" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2528, 3490 )

[node name="WoodArea9" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2438, 2726 )

[node name="WoodArea10" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 2545, 2070 )

[node name="WoodArea11" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 3417, 2421 )

[node name="WoodArea12" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 3111, 1035 )

[node name="WoodArea13" parent="Resources/Wood" instance=ExtResource( 7 )]
position = Vector2( 4763, 1957 )

[node name="EnemyUnits" type="YSort" parent="."]

[node name="Monk" parent="EnemyUnits" instance=ExtResource( 18 )]
position = Vector2( 6072, 3447 )

[node name="Monk2" parent="EnemyUnits" instance=ExtResource( 18 )]
position = Vector2( 6172, 3226 )

[node name="Monk3" parent="EnemyUnits" instance=ExtResource( 18 )]
position = Vector2( 6343, 2656 )

[node name="Monk4" parent="EnemyUnits" instance=ExtResource( 18 )]
position = Vector2( 6585, 3155 )

[node name="Monk5" parent="EnemyUnits" instance=ExtResource( 18 )]
position = Vector2( 6863, 3483 )

[node name="EnemyArcher" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6343, 3782 )

[node name="EnemyArcher2" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6628, 3590 )

[node name="EnemyArcher3" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6550, 2898 )

[node name="EnemyArcher4" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6692, 2628 )

[node name="EnemyArcher5" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6913, 2428 )

[node name="EnemyArcher6" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6500, 3832 )

[node name="EnemyArcher7" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 6742, 3340 )

[node name="EnemySpearman" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5695, 3875 )

[node name="EnemySpearman2" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5588, 3796 )

[node name="EnemySpearman3" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5780, 3704 )

[node name="EnemySpearman4" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5773, 3982 )

[node name="EnemySwordsman" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5816, 2656 )

[node name="EnemySwordsman2" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 6008, 2585 )

[node name="EnemySwordsman3" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5994, 2713 )

[node name="EnemySwordsman4" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5915, 2777 )

[node name="EnemySwordsman5" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 6329, 2193 )

[node name="EnemySwordsman6" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 6186, 2214 )

[node name="EnemySwordsman7" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 6215, 2364 )

[node name="EnemySwordsman8" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5274, 3533 )

[node name="EnemySwordsman9" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5409, 3576 )

[node name="EnemySpearman5" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5224, 2713 )

[node name="EnemySpearman6" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5295, 3127 )

[node name="EnemySpearman7" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5780, 3191 )

[node name="EnemySwordsman10" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5958, 4131 )

[node name="EnemySpearman8" parent="EnemyUnits" instance=ExtResource( 10 )]
position = Vector2( 5381, 2635 )

[node name="EnemySwordsman11" parent="EnemyUnits" instance=ExtResource( 15 )]
position = Vector2( 5303, 2777 )

[node name="EnemyArcher8" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 5274, 2556 )

[node name="EnemyArcher9" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 5331, 2934 )

[node name="EnemyArcher10" parent="EnemyUnits" instance=ExtResource( 13 )]
position = Vector2( 5210, 3618 )

[node name="FriendlyUnits" type="YSort" parent="."]

[node name="selection" parent="." instance=ExtResource( 5 )]

[node name="savemapstate" parent="." instance=ExtResource( 11 )]

[connection signal="child_exiting_tree" from="Structures/Enemy" to="." method="_on_Enemy_child_exiting_tree"]
[connection signal="child_exiting_tree" from="EnemyUnits" to="." method="_on_EnemyUnits_child_exiting_tree"]
[connection signal="child_exiting_tree" from="FriendlyUnits" to="." method="_on_FriendlyUnits_child_exiting_tree"]
